inst/app/www/custom.css
.hover-info {
  font-size: 10px;
  position: relative;
  padding: 4px;
  left: -4px;
  bottom: 10px;
  color: #A0A0A0;
}

/* fix for FixedColumns styling in Datasets tab */
.DTFC_RightWrapper {
  right: unset !important;
}

/* MDS plots */

.mobile-margin {
  margin-top: 50px;
}

@media (min-width: 768px) {
  .mobile-margin {
    margin-top: 0px;
  
  }
}


.hover-info:hover {
  color: cornflowerblue;
}

.hover-info i {
  vertical-align: middle;
}


.selectize-dropdown-content {
  max-height: 300px;
}

/* for showing cluster colour in dropdown */
.input-swatch {
  height: 10px; 
  width: 10px; 
  border: 1px solid #54575a;
  display: inline-block; 
  margin-right: 5px;
}

/* swatch for Pathways plot L1000 label */
.pert-label .input-swatch {
  height: 6px; 
  width: 6px; 
  border: none;
  border-radius: 50%;
  margin-right: 5px;
  vertical-align: middle;
}

.pert-label .input-swatch.same {
  background-color: red;
}

.pert-label .input-swatch.opposite {
  background-color: blue;
}

.pert-label {
  display: none;
  color: #333;
  font-family: "Open Sans", verdana, arial, sans-serif;
  font-size: 14px;
}

/* swatch for label transfer in Single Cell page */
.circle-swatch {
  height: 8px;
  width: 8px;
  display: inline-block;
  border-radius: 50%;
  background-color: #5cb85c;
  margin-top: 6px;
}

.form-control {
  /* remove ugly box shadow from inputs */
  box-shadow: inset 0px 0px 0px 0px red;
}

/* INTEGRATION RELATED */

.well-form {
  border: 1px solid #e7e7e7;
  max-width: 400px !important;
  background-color: #f8f8f8;
  padding: 10px;
}

.well-form.no-well {
  background-color: white;
}

.hidden-form {
  padding: 10px 0px 0px;
  border-width: 1px 0px;
  border-style: solid;
  border-color: #e7e7e7;
  margin-bottom: 10px;
}

/* makes borders work when multiple hidden forms */
.hidden-forms {
  margin-bottom: 10px;
}

.hidden-forms .hidden-form {
  margin-bottom: -1px;
}


/* VALIDATION RELATED */

.validate-wrapper.has-error button {
  border-color: #a94442;
  color: #a94442;
  outline-color: #a94442;
}

.validate-wrapper.has-error .help-block {
  display: block;
}

.validate-wrapper .help-block {
  display: none;
  margin-top: 10px;
}




/* FORMS BESIDE BUTTONS */
.well-form .form-group {
  min-height: 100px;
}

.selectize-fh,
.well-form .form-group {
  min-height: 100px; 
} 


.input-group .selectize-input {
  border-top-right-radius: 0; 
  border-bottom-right-radius: 0;
}

.input-group-btn .dropdown {
  display: inline-block;
}

.input-group-btn .dropdown button,
.input-group-btn a.btn {
  border-top-left-radius: 0; 
  border-bottom-left-radius: 0;
  border-left-width: 0px;
}

.input-group-btn.dropdown .caret {
  display: none;
}

.squashed-btn {
  border-radius: 0px;
}


.input-group-btn {
  vertical-align: top;
}

/* same height as selectize input  */
.input-group-btn .btn {
  min-height: 34px;
}

.input-group-btn a {
  z-index: 0 !important;
}



/* FULL HEIGHT BUTTON BESIDE INPUT */

.full-height-btn .input-group-btn,
.full-height-btn .input-group-btn a {
  min-width: 42px;
}

.full-height-btn .input-group-btn:not(:last-child) button,
.full-height-btn .input-group-btn:not(:last-child) a {
  border-radius: 0;
}

.full-height-btn button {
  position: absolute !important;
  top: 0;
  bottom: 0;
  right: 0;
}

.full-height-selectize {
  display: table-cell;
}

.full-height-selectize .selectize-input {
  display: block !important; 
}

.full-height-selectize .selectize-control {
  margin-bottom: 0;
}



/* BRAND */
.brand-icons {
  background-color: white;
  padding: 5px 12px;
  border: 1px solid #ccc; 
  cursor: default;
}

.brand-icons i {
  color: cornflowerblue;
  font-size: 14px;
}


/* NAVBAR */
.navbar-default {
  background-color: white;
}

.navbar {
  margin-bottom: 50px;
}

.navbar-default .navbar-nav>.active>a,
.navbar-default .navbar-nav>.active>a:hover,
.navbar-default .navbar-nav>.active>a:focus,
.navbar-default .navbar-nav>li>a:hover {
  padding: 5px 12px;
  margin: 9px 2px;
  border: 1px solid #ccc;
  background-color: white;
  color: cornflowerblue;
}





.btn-group-justified .dropdown-toggle::after {
  content: ' ';
  display: block;
  position: absolute;
  top: 50%;
  right: 17px;
  margin-top: -3px;
  width: 0;
  height: 0;
  border-style: solid;
  border-width: 5px 5px 0 5px;
  border-color: #333333 transparent transparent transparent;
}



/* DATATABLES */

.dt-fake-height {
  height: 1px;
}

td.dt-nopad {
  padding: 0px !important; 
  height: 37px;
}

td.dt-nopad div {
  height: 100%; 
  width: 100%; 
  text-align: center;
}

td.dt-nopad span {
  display: inline-block; 
  padding: 8px 10px; 
  color: white;
}

/* table text on 1 line */
.dt-container {
  white-space: nowrap;
}


/* download button in input-group */
.input-group-btn:last-child > .btn, 
.input-group-btn:last-child > .btn-group {
  border-left: 1px solid #ccc;
}

/* downloadable plots */

.downloadable-plot:hover .visible-plot.downloadable-plot-btn {
  animation: 0.2s fadeIn;
  animation-fill-mode: forwards;
}

.downloadable-plot-btn {
  animation: 0.2s fadeOut;
  animation-fill-mode: forwards;
}

.downloadable-plot-btn i {
  color: rgba(68, 68, 68, 0.3);
}

.downloadable-plot-btn:hover i {
  color: rgba(68, 68, 68, 0.7);
}

.downloadable-plot-btn .btn {
  background-color: transparent !important;
  outline: none !important;
  box-shadow: none !important;
}

.downloadable-plot-btn .btn {
  border: none;
  padding: 0px;
}

@keyframes fadeIn {
  0% {
    opacity: 0;
  }
  100% {
    visibility: visible;
    opacity: 1;
  }
}

@keyframes fadeOut {
  0% {
    opacity: 1;
    visibility: visible;
  }
  100% {
    opacity: 0;
  }
}

/* custom tooltip styling */

.tooltip .tooltip-inner {
  font-family: "Open Sans", verdana, arial, sans-serif;
  max-width: 600px;
  padding:16px 12px;
  color:#fff;
  text-align:center;
  font-size: 14px;
  background-color:rgba(0,0,0,0.90);
  border-radius:5px;
  }

  /* for ggplot download data button: making it look like plotly */
.tooltip.ggplot .tooltip-inner {
  background: rgb(105, 115, 138);
  padding: 8px 10px;
  font-size: 12px;
  line-height: 12px;
  white-space: nowrap;
  border-radius: 2px;
}

.tooltip.ggplot .tooltip-arrow {
  border-left-color: rgb(105, 115, 138);
}

